# sdp-request-client

./: .gitignore  Cargo.toml  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
src/: auth.rs  builders.rs  client.rs  error.rs  lib.rs
tests/: integration.rs
