[package]
name = "sdp-request-client"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A Rust client for making requests to the SDP API."
repository = "https://github.com/nestyy1337/sdp-request-client"
keywords = ["sdp", "api", "client"]
categories = ["api-bindings"]

[lib]
name = "sdp_request_client"
path = "src/lib.rs"

[dependencies]
serde-aux = "4.7.0"
chrono = "0.4.43"
reqwest = { version = "0.13.1", features = ["json", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
thiserror = "2.0.18"
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
dotenv = "0.15.0"

[package.metadata.release]
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release {{version}}"
