[package]
name = "sdp-request-client"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A Rust client for making requests to the SDP API."
repository = "https://github.com/nestyy1337/sdp-request-client"
keywords = ["sdp", "api", "client"]
categories = ["api-bindings"]

[lib]
name = "sdp_request_client"
path = "src/lib.rs"

[dependencies]
serde-aux = "4.0.0"
chrono = "0.4.32"
reqwest = { version = "0.13.0", features = ["json", "query", "form"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.25"
serde_urlencoded = "0.7.0"
thiserror = "2.0.0"
tracing = "0.1.0"
url = "2.0.0"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"

[package.metadata.release]
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release {{version}}"
